--- a/css/mobile/m-bp1.css
+++ b/css/mobile/m-bp1.css
@@ -1,16 +1,5 @@
 /* || STYLE GENERAL */
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-a, a:focus, a:active {
-    text-decoration: none;  /* On enlève la décoration */
-    color: #000000;
-}
-
 /* "Trouvez votre hébergement..." */
 h1 {
     font-size: 21px;
@@ -54,11 +43,10 @@ body {
 
 /* Note étoiles */
 .rating {
-    width: 68px;
-    font-size: 12px;
+    width: initial;
     color: #0065FC;
     display: flex;
-    justify-content: space-between;
+    justify-content: initial;
 }
 
 .fa-star {
@@ -68,36 +56,46 @@ body {
 /* || HEADER */
 
 header {
-    width: 93%;
-    margin: 0 auto 0 auto;
-    display: flex;
+    width: 100%;
+    margin: 0 0 0 0;
+    flex-direction: column;
     justify-content: space-between; /* Pour avoir le logo tout à gauche et le nav tout à droite */
+    align-items: center;
 }
 
 /* Logo */
 header img {
-    width: 95.5px;
+    width: 95px;
     height: 45px;
-    margin: 45px 0 0 3%;
+    margin: 10px 0 0 12%;
+}
+
+nav {
+    width: 100%;
+    margin: 30px 0 0 0;
 }
 
 header ul {
     margin: 0;
     padding: 0;
     font-size: 16px;
+    text-align: center;
     display: flex;
-    justify-content: space-around;  /* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
-    align-items: baseline; /* On aligne en bas */
+    justify-content: initial;  /* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
+    align-items: initial; /* On aligne en bas */
 }
 
 header li {
-    padding: 45px 22px 0px 22px;    /* Permet d'avoir la bordure tout en haut */
-    border-top: 2px solid transparent;  /* Evite le décalage du texte lors du hover */
+    width: 50%;
+    padding: 0 0 10px 0;    /* Permet d'avoir la bordure tout en haut */
+    border-top: 0;  /* Evite le décalage du texte lors du hover */
+    border-bottom: 4px solid #F2F2F2;
 }
 
 /* Bordure devient bleu quand la souris passe sur le li */
 header li:hover {
-    border-top: 2px solid #0065FC;
+    border-top: 0;
+    border-bottom: 4px solid #0065FC;
 }
 
 /* Hébergements et Activités deviennent bleu au passage de la souris */
@@ -108,9 +106,14 @@ header li:hover a {
 
 /* || MAIN */
 main {
-    width: 93%;
-    margin: 2% auto 4% auto;
+    width: 100%;
+    margin: 4% auto 5% auto;
     flex: 1 0 auto;
+}
+
+.search-filters {
+    width: 90%;
+    margin: 0 auto 0 auto;
 }
 
 /* "En plein centre ville..." */
@@ -123,49 +126,54 @@ main {
 /* || BARRE DE RECHERCHE */
 
 .search-bar {
-    margin: 1% 0 0 0;
+    margin: 30px 0 0 0;
     display: flex;
 }
 
 .fa-location-dot {
-    height: 50px;
-    width: 50px;
-    border-top-left-radius: 20px 20px;
-    border-bottom-left-radius: 20px 20px;
+    height: 45px;
+    width: 45px;
+    border-top-left-radius: 15px 15px;
+    border-bottom-left-radius: 15px 15px;
     background-color: #F2F2F2;
+    font-size: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
 }
 
 /* Champ de recherche */
 .search {
-    width: 236px;
-    height: 50px;
+    height: 45px;
+    min-width: 180px;
     border: 0px;
     border-top: 1px solid #F2F2F2;
     border-bottom: 1px solid #F2F2F2;
     padding: 0 0 0 16px; /* On se décale un peu de la gauche */
+    font-size: 16px;
     font-weight: bold;
 }
 
 .search-button {
-    width: 130px;
-    border-top-right-radius: 20px 20px; /* On arrondit l'angle supérieur droit */
-    border-bottom-right-radius: 20px 20px;  /* On arrondit l'angle inférieur droit */
+    /*width: 60px;*/
+    /*border-top-right-radius: 20px 20px;*/ /* On arrondit l'angle supérieur droit */
+    /*border-bottom-right-radius: 20px 20px;*/  /* On arrondit l'angle inférieur droit */
+    width: 45px;
+    margin: 0 0 0 0;
+    border-radius: 15px 15px 15px 15px;
     border: 0px solid;
     background-color: #0065FC;
     font-size: 16px;
-    font-weight: bold;
+    font-weight: initial;
     color: #ffffff;
+    flex-shrink: 0;
 }
 
-/* 
-   On insère "Rechercher" dans le bouton de recherche
-   Nécessaire pour pouvoir changer le texte en icone en version mobile
-*/
+/* Changement de "Rechercher" en icone Loupe pour vue mobile */
 .search-button:before {
-    content:"Rechercher";
+    font-family: fontAwesome;
+    content: "\f002";
 }
 
 
@@ -186,7 +194,7 @@ main {
 }
 
 .filters-list {
-    margin: 2% 0 0 9px;
+    margin: 30px 0 0 0;
     display: flex;    /* Permettre à la phrase de revenir à la ligne */
     flex-wrap: wrap;
     align-items: center;
@@ -198,9 +206,14 @@ main {
     font-size: 17px;
 }
 
+.filters-list span:first-child {
+    width: 100%;
+    margin: 0 0 10px 0;
+}
+
 /* Chaque filtre */
 .filters {
-    margin: 5px 0 5px 30px;
+    margin: 5px 1% 10px 0;
     border: 2px solid #d9d9d9;
     border-left: 0px;
     border-radius: 100px 100px 100px 100px; /* On arrondit les coins */
@@ -214,12 +227,12 @@ main {
 
 /* Logo filtre */
 .filters .fa-solid {
-    width: 50px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
     background-color: #DEEBFF;
     border-radius: 100px 100px 100px 100px; /* Cercle */
     color: #0065FC;
-    font-size: 18px;
+    font-size: 14px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -236,20 +249,20 @@ main {
 
 /* Intitulé filtre */
 .filters span {
-    padding: 0 20px 0 10px;
+    padding: 0 15px 0 8px;
+    font-size: 14px;
 }
 
 /* Dimensions de la div avec logo + phrase */
 .results {
-    margin: 3% 0 0 0;
-    font-size: 16px;
+    margin: 20px 0 0 0;
     display: flex;
-    align-items: center;
+    align-items: initial;
 }
 
 .fa-info {
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
     border-radius: 100px 100px 100px 100px; /* Cercle */
     border: 1px solid #d9d9d9;
     font-size: 12px;
@@ -257,6 +270,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
 }
 
 /* Phrase nombre de résultats */
@@ -266,37 +280,49 @@ main {
 
 /* Div hébergements et populaires */
 .lodgings-popular {
-    margin: 36px 0 0 0;
+    margin: 30px 0 0 0;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: initial;
 }
 
+.lodgings-popular section:nth-child(1) {
+    order: 2;
+}
+
+.lodgings-popular section:nth-child(2) {
+    order: 1;
+}
 
 /* || HEBERGEMENTS MARSEILLE */
 
 #lodgings {
-    width: 65%;
-    background-color: #F2F2F2;
-    border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
-    padding: 0 3% 0 3%;
+    width: initial;
+    background-color: initial;
+    border-radius: initial; /* Arrondi bordure */
+    padding: 0 6% 0 6%;
 }
 
 /* "Hébergements à Marseille" */
 #lodgings h2 {
     width: 100%;
-    margin: 35px 0 7px 0;
+    margin: 40px 0 7px 0;
 }
 
 .lodging-list {
+    margin: 8% 0 0 0;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 
 /* Encadré blanc card hébergement */
 .lodging-list a {
-    width: 31%;
-    margin: 2% 0 2% 0;
+    width: 100%;
+    max-width: 282px;
+    margin: 0 0 5% 0;
     padding: 5px;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
@@ -312,7 +338,7 @@ main {
 }
 
 .lodging-image {
-    height: 110px;
+    height: 92px;
 }
 
 /* Miniature de card hébergement */
@@ -345,7 +371,7 @@ main {
 /* "Afficher plus" */
 .show-more {
     width: 100%;
-    margin: 3% 0 5% 0;
+    margin: 20px 0 5% 0;
     font-size: 16px;
     font-weight: bold;
 }
@@ -354,37 +380,40 @@ main {
 /* || LES PLUS POPULAIRES */
 
 .most-popular {
-    width: 31%;
-    border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
-    padding: 0 3% 0 3%;
+    width: initial;
+    border-radius: 0; /* Arrondi bordure */
+    padding: 0 6% 5% 6%;
     background-color: #F2F2F2;
-    flex-shrink: 2;
+    flex-shrink: initial;
 }
 
 /* "Les plus populaires" */
 .most-popular h2 {
-    margin: 35px 0 7px 0;
+    margin: 30px 0 7px 0;
     display: inline-block;
 }
 
 /* Etoile "Les plus populaires" */
 .most-popular-star {
-    margin: 35px 0 7px 0;
+    margin: 30px 0 7px 0;
     font-size: 20px;
     float: right;
 }
 
 .popular-list {
-    margin: 5% 0 0 0;
+    margin: 6% 0 0 0;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 
 /* Encadré blanc card populaire */
 .popular-list a {
-    margin: 0 0 8% 0;
+    width: 100%;
+    max-width: 282px;
+    margin: 0 0 4% 0;
     padding: 5px;
     border-radius: 20px 20px 20px 20px;
     background-color: #ffffff;
@@ -412,7 +441,7 @@ main {
 
 /* Légende card populaire */
 .popular figcaption {
-    padding: 0 0 0 4%;
+    padding: 0 0 0 6%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -421,7 +450,7 @@ main {
 
 .popular h3 {
     width: 85%;
-    padding: 4% 0 0 0;
+    padding: 6% 0 0 0;
 }
 
 /* Prix populaire */
@@ -432,21 +461,25 @@ main {
 
 /* Note populaire */
 .popular .rating {
-    padding: 3% 0 3% 0;
+    padding: 3% 0 6% 0;
 }
 
 
 /* || ACTIVITES MARSEILLE */
 
+#activities {
+    padding: 0 6% 0 6%;
+}
+
 /* "Activités à Marseille" */
 #activities h2 {
-    margin: 50px 0 0 0;
+    margin: 20px 0 7px 0;
 }
 
 /* Div avec les cards activités */
 .activities-list {
-    height: 420px;
-    margin: 25px 0 0 0;
+    height: initial;
+    margin: 40px 0 0 0;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -456,51 +489,53 @@ main {
 
 /* Encadré blanc card activité */
 .activities-list a {
-    width: 22%;
+    width: 100%;
+    max-width: 282px;
     height: 100%;
-    border-radius: 20px 20px 20px 20px;
+    margin: 0 0 8% 0;
+    border-radius: 30px 30px 30px 30px;
     background-color: #ffffff;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
 }
 
 /* Encadré 2eme card */
 .activities-list a:nth-child(2) {
-    height: 53%;
+    height: initial;
 }
 
 /* Encadré 3eme card */
 .activities-list a:nth-child(3) {
-    height: 37%;
+    height: initial;
 }
 
 /* Encadré 5eme card */
 .activities-list a:nth-child(5) {
-    height: 44%;
+    height: initial;
 }
 
 /* Encadré 6eme card */
 .activities-list a:nth-child(6) {
-    height: 47%;
+    height: initial;
 }
 
 /* Miniature 2eme card */
 .activities-list a:nth-child(2) img {
-    height: 76%;
+    height: 108px;
 }
 
 /* Miniature 3eme card */
 .activities-list a:nth-child(3) img {
-    height: 76%;
+    height: 108px;
 }
 
 /* Miniature 5eme card */
 .activities-list a:nth-child(5) img {
-    height: 76%;
+    height: 108px;
 }
 
 /* Miniature 6eme card */
 .activities-list a:nth-child(6) img {
-    height: 76%;
+    height: 108px;
 }
 
 /* Card activité */
@@ -513,7 +548,8 @@ main {
 /* Miniature card activité */
 .activity img {
     width: 100%;
-    height: 400px;
+    max-width: 282px;
+    height: 108px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
     flex-grow: 1;
@@ -521,7 +557,7 @@ main {
 
 /* Pour chaque légende de card activité */
 .activity figcaption {
-    margin: 5% 0 5% 5%;
+    margin: 7% 0 5% 6%;
 }
 
 
@@ -533,31 +569,32 @@ footer {
 }
 
 .footer-list {
-    width: 93%;
+    width: 90%;
     margin: 0 auto 0 auto;
-    padding: 3% 2% 4% 2%;
+    padding: 10% 2% 6% 4%;
     display: flex;
+    flex-direction: column;
 }
 
 /* Tout le contenu de chaque div */
 footer li {
-    margin: 0 0 14px 0;
+    margin: 0 0 13px 0;
     font-size: 15px;
 }
 
 /* Titre de liste */
 footer p {
-    margin: 0 0 22px 0;
+    margin: 0 0 20px 0;
     font-size: 17px;
     font-weight: bold;
 }
 
 /* Espacement entre A propos et Nos Hébergements */
 .about {
-    margin: 0 228px 0 0;
+    margin: 0 0 35px 0;
 }
 
 /* Espacement entre Nos Hébergements et Assistance */
 .our-lodgings {
-    margin: 0 292px 0 0;
+    margin: 0 0 35px 0;
 }
