--- a/css/mobile/m-bp2.css
+++ b/css/mobile/m-bp2.css
@@ -1,20 +1,8 @@
 /* || STYLE GENERAL */
 
-* {
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
-}
-
-a, a:focus, a:active {
-    text-decoration: none;  /* On enlève la décoration */
-    color: #000000;
-}
-
 /* "Trouvez votre hébergement..." */
 h1 {
     font-size: 21px;
-    margin-top: 12px;
 }
 
 /* "Hébergements à Marseille", "Les plus populaires" et "Activités à Marseille" */
@@ -34,6 +22,8 @@ ul {
 
 body {
     font-family: 'Raleway', serif;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Pour chaque étoile "vide" */
@@ -44,7 +34,6 @@ body {
 /* Prix hébergement */
 .price {
     font-size: 13px;
-    margin: 7px 0 0px 0;
 }
 
 /* Quand un prix est bas */
@@ -54,48 +43,59 @@ body {
 
 /* Note étoiles */
 .rating {
-    display: flex;
-    justify-content: space-between;
-    margin: 10px 0 0 0;
-    width: 68px;
-    font-size: 12px;
+    width: initial;
     color: #0065FC;
+    display: flex;
+    justify-content: initial;
 }
 
+.fa-star {
+    font-size: 11px;
+}
 
 /* || HEADER */
 
 header {
-    display: flex;
+    width: 100%;
+    margin: 0 0 0 0;
+    flex-direction: column;
     justify-content: space-between; /* Pour avoir le logo tout à gauche et le nav tout à droite */
-    margin: 0 50px 0 50px;
+    align-items: center;
 }
 
 /* Logo */
 header img {
-    margin: 45px 0 0 45px;
-    width: 95.5px;
+    width: 95px;
     height: 45px;
+    margin: 10px 0 0 12%;
 }
 
-header nav ul {
+nav {
+    width: 100%;
+    margin: 30px 0 0 0;
+}
+
+header ul {
     margin: 0;
     padding: 0;
-    width: 320px;
     font-size: 16px;
+    text-align: center;
     display: flex;
-    justify-content: space-around;  /* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
-    align-items: baseline; /* On aligne en bas */
+    justify-content: initial;  /* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
+    align-items: initial; /* On aligne en bas */
 }
 
-header nav ul li {
-    padding: 45px 22px 0px 22px;    /* Permet d'avoir la bordure tout en haut */
-    border-top: 2px solid transparent;  /* Evite le décalage du texte lors du hover */
+header li {
+    width: 50%;
+    padding: 0 0 10px 0;    /* Permet d'avoir la bordure tout en haut */
+    border-top: 0;  /* Evite le décalage du texte lors du hover */
+    border-bottom: 4px solid #F2F2F2;
 }
 
 /* Bordure devient bleu quand la souris passe sur le li */
 header li:hover {
-    border-top: 2px solid #0065FC;
+    border-top: 0;
+    border-bottom: 4px solid #0065FC;
 }
 
 /* Hébergements et Activités deviennent bleu au passage de la souris */
@@ -106,7 +106,14 @@ header li:hover a {
 
 /* || MAIN */
 main {
-    margin: 32px 50px 25px 50px;
+    width: 100%;
+    margin: 4% auto 5% auto;
+    flex: 1 0 auto;
+}
+
+.search-filters {
+    width: 90%;
+    margin: 0 auto 0 auto;
 }
 
 /* "En plein centre ville..." */
@@ -119,50 +126,54 @@ main {
 /* || BARRE DE RECHERCHE */
 
 .search-bar {
-    height: 50px;
-    width: 414px;
-    margin: 18px 0 30px 0;
+    margin: 30px 0 0 0;
     display: flex;
-    border-top: 1px solid #F2F2F2;
-    border-bottom: 1px solid #F2F2F2;
 }
 
 .fa-location-dot {
-    display: flex;
-    width: 50px;
+    height: 45px;
+    width: 45px;
+    border-top-left-radius: 15px 15px;
+    border-bottom-left-radius: 15px 15px;
     background-color: #F2F2F2;
+    font-size: 16px;
+    display: flex;
     justify-content: center;
     align-items: center;
-    border-top-left-radius: 20px 20px;
-    border-bottom-left-radius: 20px 20px;
+    flex-shrink: 0;
 }
 
 /* Champ de recherche */
 .search {
-    flex-grow: 1;
-    height: 100%;
+    height: 45px;
+    min-width: 180px;
     border: 0px;
-    padding-left: 16px; /* On se décale un peu de la gauche */
+    border-top: 1px solid #F2F2F2;
+    border-bottom: 1px solid #F2F2F2;
+    padding: 0 0 0 16px; /* On se décale un peu de la gauche */
+    font-size: 16px;
     font-weight: bold;
 }
 
 .search-button {
-    font-size: 16px;
-    font-weight: bold;
-    color: #ffffff;
-    width: 128px;
-    border-top-right-radius: 20px 20px; /* On arrondit l'angle supérieur droit */
-    border-bottom-right-radius: 20px 20px;  /* On arrondit l'angle inférieur droit */
+    /*width: 60px;*/
+    /*border-top-right-radius: 20px 20px;*/ /* On arrondit l'angle supérieur droit */
+    /*border-bottom-right-radius: 20px 20px;*/  /* On arrondit l'angle inférieur droit */
+    width: 45px;
+    margin: 0 0 0 0;
+    border-radius: 15px 15px 15px 15px;
     border: 0px solid;
     background-color: #0065FC;
+    font-size: 16px;
+    font-weight: initial;
+    color: #ffffff;
+    flex-shrink: 0;
 }
 
-/* 
-   On insère "Rechercher" dans le bouton de recherche
-   Nécessaire pour pouvoir changer le texte en icone en version mobile
-*/
+/* Changement de "Rechercher" en icone Loupe pour vue mobile */
 .search-button:before {
-    content:"Rechercher";
+    font-family: fontAwesome;
+    content: "\f002";
 }
 
 
@@ -179,44 +190,52 @@ main {
 .filters-results {
     height: 112px;
     max-width: 929px;
-    margin: 0 9px 0 9px;
-    display: flex;
-    flex-wrap: wrap;    /* Permettre à la phrase de revenir à la ligne */
+    margin: 0 0 0 1%;
+}
+
+.filters-list {
+    margin: 30px 0 0 0;
+    display: flex;    /* Permettre à la phrase de revenir à la ligne */
+    flex-wrap: wrap;
     align-items: center;
 }
 
 /* "Filtres" */
-.filters-results span {
+.filters-list span {
     font-weight: bold;  /* "Filtres" en gras */
     font-size: 17px;
 }
 
+.filters-list span:first-child {
+    width: 100%;
+    margin: 0 0 10px 0;
+}
+
 /* Chaque filtre */
 .filters {
-    height: 50px;
+    margin: 5px 1% 10px 0;
+    border: 2px solid #d9d9d9;
+    border-left: 0px;
     border-radius: 100px 100px 100px 100px; /* On arrondit les coins */
     background-color: #ffffff;
     color: #000000;
-    border: 2px solid #d9d9d9;
-    border-left: 0px;
+    font-weight: bold;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 2% 0 0;  /* Décalage de la droite pour le texte */
-    margin-left: 2%;
-    font-weight: bold;
 }
 
 /* Logo filtre */
 .filters .fa-solid {
-    color: #0065FC;
-    display: flex;
-    width: 50px;
-    height: 50px;
-    justify-content: center;
-    align-items: center;
+    width: 40px;
+    height: 40px;
     background-color: #DEEBFF;
     border-radius: 100px 100px 100px 100px; /* Cercle */
+    color: #0065FC;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .filters:hover {
@@ -230,255 +249,296 @@ main {
 
 /* Intitulé filtre */
 .filters span {
-    margin-left: 10px;
+    padding: 0 15px 0 8px;
+    font-size: 14px;
 }
 
 /* Dimensions de la div avec logo + phrase */
 .results {
+    margin: 20px 0 0 0;
     display: flex;
-    height: 24px;
-    font-size: 16px;
-    margin-top: 38px;
-    justify-content: space-between;
-    align-items: center;
+    align-items: initial;
 }
 
 .fa-info {
-    font-size: 12px;
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
     border-radius: 100px 100px 100px 100px; /* Cercle */
     border: 1px solid #d9d9d9;
+    font-size: 12px;
     color: #0065FC;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
 }
 
 /* Phrase nombre de résultats */
 .results p {
-    margin-left: 10px;
+    margin: 0 0 0 10px;
 }
 
 /* Div hébergements et populaires */
 .lodgings-popular {
+    margin: 30px 0 0 0;
     display: flex;
-    justify-content: space-between;
-    margin-top: 36px;
+    flex-direction: column;
+    justify-content: initial;
 }
 
+.lodgings-popular section:nth-child(1) {
+    order: 2;
+}
+
+.lodgings-popular section:nth-child(2) {
+    order: 1;
+}
 
 /* || HEBERGEMENTS MARSEILLE */
 
 #lodgings {
-    max-width: 80%;
-    background-color: #F2F2F2;
-    border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
-    padding: 0 3% 0 3%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    width: initial;
+    background-color: initial;
+    border-radius: initial; /* Arrondi bordure */
+    padding: 0 6% 0 6%;
 }
 
 /* "Hébergements à Marseille" */
 #lodgings h2 {
     width: 100%;
-    margin-top: 32px;
-    align-self: center;
+    margin: 40px 0 7px 0;
+}
+
+.lodging-list {
+    margin: 8% 0 0 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 /* Encadré blanc card hébergement */
-#lodgings a {
-    width: 31%;
-    min-height: 29%;
-    max-height: 34%;
-    background-color: #ffffff;
+.lodging-list a {
+    width: 100%;
+    max-width: 282px;
+    margin: 0 0 5% 0;
+    padding: 5px;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
+    background-color: #ffffff;
 }
 
 /* Card hébergement */
 .lodging {
     margin: 0;
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+}
+
+.lodging-image {
+    height: 92px;
 }
 
 /* Miniature de card hébergement */
 .lodging img {
-    max-height: 125px;
     width: 100%;
+    height: 100%;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
-    padding: 5px;
-    flex-grow: 1;
 }
 
 .lodging figcaption {
-    /*margin: 0 0 2% 6%;*/
-    margin-left: 6%;
+    padding: 0 0 0 4%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
 
+.lodging h3 {
+    padding: 4% 0 0 0;
+}
+
+.lodging .price {
+    padding: 1% 0 0 0;
+}
+
+.lodging .rating {
+    padding: 3% 0 3% 0;
+}
+
 /* "Afficher plus" */
 .show-more {
+    width: 100%;
+    margin: 20px 0 5% 0;
     font-size: 16px;
     font-weight: bold;
-    width: 100%;
 }
 
 
 /* || LES PLUS POPULAIRES */
 
 .most-popular {
-    max-width: 36%;
+    width: initial;
+    border-radius: 0; /* Arrondi bordure */
+    padding: 0 6% 5% 6%;
     background-color: #F2F2F2;
-    border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
-    padding: 0 3% 0 3%;
-    margin-left: 3%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-shrink: initial;
 }
 
 /* "Les plus populaires" */
 .most-popular h2 {
+    margin: 30px 0 7px 0;
     display: inline-block;
-    margin: 3% 0 0 0;
 }
 
 /* Etoile "Les plus populaires" */
 .most-popular-star {
-    float: right;
+    margin: 30px 0 7px 0;
     font-size: 20px;
-    margin-top: 3%;
+    float: right;
+}
+
+.popular-list {
+    margin: 6% 0 0 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 /* Encadré blanc card populaire */
-.most-popular a {
-    width: 85%;
-    max-height: 25%;
-    background-color: #ffffff;
-    margin: 15px 0 15px 0;
+.popular-list a {
+    width: 100%;
+    max-width: 282px;
+    margin: 0 0 4% 0;
+    padding: 5px;
     border-radius: 20px 20px 20px 20px;
+    background-color: #ffffff;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
 }
 
 /* Card populaire */
 .popular {
-    margin: 0;
-    width: 100%;
-    height: 100%;
     display: flex;
+    justify-content: space-between;
+}
+
+.popular-image {
+    width: 120px;
+    height: 130px;
 }
 
 /* Miniature card populaire */
 .popular img {
-    max-width: 127px;
+    width: 100%;
     height: 100%;
     border-radius: 20px 0 0 20px;
     object-fit: cover;
-    padding: 5px;
-    flex-grow: 1;
 }
 
 /* Légende card populaire */
 .popular figcaption {
-    /*margin: 5% 10% 0 6%;*/
-    flex: 1;
+    padding: 0 0 0 6%;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
+    flex: 1;
+}
+
+.popular h3 {
+    width: 85%;
+    padding: 6% 0 0 0;
 }
 
 /* Prix populaire */
 .popular .price {
-    margin-top: 10px;
+    padding: 5% 0 0 0;
+    flex-grow: 1;
 }
 
 /* Note populaire */
 .popular .rating {
-    margin-top: 37px;
+    padding: 3% 0 6% 0;
 }
 
 
 /* || ACTIVITES MARSEILLE */
 
 #activities {
-    width: 100%;
+    padding: 0 6% 0 6%;
 }
 
 /* "Activités à Marseille" */
 #activities h2 {
-    margin-top: 50px;
+    margin: 20px 0 7px 0;
 }
 
 /* Div avec les cards activités */
-.all-activities {
-    width: 100%;
-    height: 400px;
-    margin-top: 25px;
+.activities-list {
+    height: initial;
+    margin: 0 0 0 0;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
+    align-items: initial;
 }
 
 /* Encadré blanc card activité */
-.all-activities a {
-    width: 302px;
-    height: 100%;
+.activities-list a {
+    width: 49%;
+    height: 402px;
+    margin: 0 0 0 0;
+    border-radius: 30px 30px 30px 30px;
     background-color: #ffffff;
-    border-radius: 20px 20px 20px 20px;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
 }
 
 /* Encadré 2eme card */
-.all-activities a:nth-child(2) {
-    height: 53%;
+.activities-list a:nth-child(2) {
+    height: initial;
 }
 
 /* Encadré 3eme card */
-.all-activities a:nth-child(3) {
-    height: 37%;
+.activities-list a:nth-child(3) {
+    height: initial;
 }
 
 /* Encadré 5eme card */
-.all-activities a:nth-child(5) {
-    height: 44%;
+.activities-list a:nth-child(5) {
+    height: initial;
 }
 
 /* Encadré 6eme card */
-.all-activities a:nth-child(6) {
-    height: 47%;
+.activities-list a:nth-child(6) {
+    height: initial;
 }
 
 /* Miniature 2eme card */
-.all-activities a:nth-child(2) img {
-    height: 76%;
+.activities-list a:nth-child(2) img {
+    height: 108px;
 }
 
 /* Miniature 3eme card */
-.all-activities a:nth-child(3) img {
-    height: 76%;
+.activities-list a:nth-child(3) img {
+    height: 108px;
 }
 
 /* Miniature 5eme card */
-.all-activities a:nth-child(5) img {
-    height: 76%;
+.activities-list a:nth-child(5) img {
+    height: 108px;
 }
 
 /* Miniature 6eme card */
-.all-activities a:nth-child(6) img {
-    height: 76%;
+.activities-list a:nth-child(6) img {
+    height: 108px;
 }
 
 /* Card activité */
 .activity {
-    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -487,73 +547,52 @@ main {
 /* Miniature card activité */
 .activity img {
     width: 100%;
-    flex-grow: 1;
+    height: initial;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
+    flex-grow: 1;
 }
 
 /* Pour chaque légende de card activité */
 .activity figcaption {
-    margin: 16px 0 16px 16px;
+    margin: 5% 0 5% 5%;
 }
 
 
 /* || Footer */
 
 footer {
-    height: 230px;
     background-color: #F2F2F2;
-    display: flex;
-    padding: 0 50px 0 50px;
+    flex-shrink: 0;
 }
 
-footer div {
-    margin: 47px 0 52px 0;
-    font-size: 15px;
+.footer-list {
+    width: 90%;
+    margin: 0 auto 0 auto;
+    padding: 10% 2% 6% 4%;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Tout le contenu de chaque div */
-footer div * {
-    margin-bottom: 18px;
+footer li {
+    margin: 0 0 13px 0;
+    font-size: 15px;
 }
 
 /* Titre de liste */
-footer > div p {
-    margin-bottom: 22px;
+footer p {
+    margin: 0 0 20px 0;
+    font-size: 17px;
     font-weight: bold;
 }
 
 /* Espacement entre A propos et Nos Hébergements */
 .about {
-    margin-right: 228px;
+    margin: 0 0 35px 0;
 }
 
 /* Espacement entre Nos Hébergements et Assistance */
 .our-lodgings {
-    margin-right: 292px;
+    margin: 0 0 35px 0;
 }
-
-
-/* || TABLETTE */
-@media screen and (max-width: 992px)
-{
-
-}
-
-
-/* || MOBILE */
-@media screen and (max-width: 768px)
-{
-    
-}
-
-/* Extra small devices (phones, 600px and down) */
-/* @media only screen and (max-width: 600px) {...} */
-/* Small devices (portrait tablets and large phones, 600px and up) */
-/* @media only screen and (min-width: 600px) {...} */
-/* Medium devices (landscape tablets, 768px and up) */
-/* @media only screen and (min-width: 768px) {...} */
-/* Large devices (laptops/desktops, 992px and up) */
-/* @media only screen and (min-width: 992px) {...} */
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-/* @media only screen and (min-width: 1200px) {...} */
