--- a/css/mobile/m-bp3.css
+++ b/css/mobile/m-bp3.css
@@ -1,30 +1,19 @@
 /* || STYLE GENERAL */
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-a, a:focus, a:active {
-    text-decoration: none;  /* On enlève la décoration */
-    color: #000000;
-}
-
 /* "Trouvez votre hébergement..." */
 h1 {
-    font-size: 21px;
+    font-size: 43px;
 }
 
 /* "Hébergements à Marseille", "Les plus populaires" et "Activités à Marseille" */
 h2 {
-    font-size: 20px;
+    font-size: 39px;
 
 }
 
 /* Pour chaque titre de card */
 h3 {
-    font-size: 14px;
+    font-size: 33px;
 }
 
 ul {
@@ -44,7 +33,7 @@ body {
 
 /* Prix hébergement */
 .price {
-    font-size: 13px;
+    font-size: 29px;
 }
 
 /* Quand un prix est bas */
@@ -54,50 +43,59 @@ body {
 
 /* Note étoiles */
 .rating {
-    width: 68px;
-    font-size: 12px;
+    width: initial;
     color: #0065FC;
     display: flex;
-    justify-content: space-between;
+    justify-content: initial;
 }
 
 .fa-star {
-    font-size: 11px;
+    font-size: 26px;
 }
 
 /* || HEADER */
 
 header {
-    width: 93%;
-    margin: 0 auto 0 auto;
-    display: flex;
+    width: 100%;
+    margin: 0 0 0 0;
+    flex-direction: column;
     justify-content: space-between; /* Pour avoir le logo tout à gauche et le nav tout à droite */
+    align-items: center;
 }
 
 /* Logo */
 header img {
-    width: 95.5px;
-    height: 45px;
-    margin: 45px 0 0 3%;
+    width: 191px;
+    height: 90px;
+    margin: 30px 0 0 7%;
+}
+
+nav {
+    width: 100%;
+    margin: 50px 0 0 0;
 }
 
 header ul {
     margin: 0;
     padding: 0;
-    font-size: 16px;
+    font-size: 32px;
+    text-align: center;
     display: flex;
-    justify-content: space-around;  /* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
-    align-items: baseline; /* On aligne en bas */
+    justify-content: initial;  /* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
+    align-items: initial; /* On aligne en bas */
 }
 
 header li {
-    padding: 45px 22px 0px 22px;    /* Permet d'avoir la bordure tout en haut */
-    border-top: 2px solid transparent;  /* Evite le décalage du texte lors du hover */
+    width: 50%;
+    padding: 0 0 20px 0;    /* Permet d'avoir la bordure tout en haut */
+    border-top: 0;  /* Evite le décalage du texte lors du hover */
+    border-bottom: 6px solid #F2F2F2;
 }
 
 /* Bordure devient bleu quand la souris passe sur le li */
 header li:hover {
-    border-top: 2px solid #0065FC;
+    border-top: 0;
+    border-bottom: 6px solid #0065FC;
 }
 
 /* Hébergements et Activités deviennent bleu au passage de la souris */
@@ -108,14 +106,19 @@ header li:hover a {
 
 /* || MAIN */
 main {
-    width: 93%;
-    margin: 2% auto 4% auto;
+    width: auto;
+    margin: 4% auto 5% auto;
     flex: 1 0 auto;
+}
+
+.search-filters {
+    width: 90%;
+    margin: 0 auto 0 auto;
 }
 
 /* "En plein centre ville..." */
 .search-filters p {
-    font-size: 16px;
+    font-size: 31px;
     font-weight: normal;
 }
 
@@ -123,49 +126,55 @@ main {
 /* || BARRE DE RECHERCHE */
 
 .search-bar {
-    margin: 1% 0 0 0;
-    border-top: 1px solid #F2F2F2;
-    border-bottom: 1px solid #F2F2F2;
+    margin: 50px 0 0 0;
     display: flex;
 }
 
 .fa-location-dot {
-    height: 50px;
-    width: 50px;
-    border-top-left-radius: 20px 20px;
-    border-bottom-left-radius: 20px 20px;
+    height: 100px;
+    width: 15%;
+    border-top-left-radius: 30px 30px;
+    border-bottom-left-radius: 30px 30px;
     background-color: #F2F2F2;
+    font-size: 34px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
 }
 
 /* Champ de recherche */
 .search {
-    width: 236px;
-    height: 50px;
+    height: 100px;
+    width: initial;
     border: 0px;
-    padding: 0 0 0 16px; /* On se décale un peu de la gauche */
+    border-top: 2px solid #F2F2F2;
+    border-bottom: 2px solid #F2F2F2;
+    padding: 0 0 0 3%; /* On se décale un peu de la gauche */
+    font-size: 34px;
     font-weight: bold;
+    flex-grow: 1;
 }
 
 .search-button {
-    width: 130px;
-    border-top-right-radius: 20px 20px; /* On arrondit l'angle supérieur droit */
-    border-bottom-right-radius: 20px 20px;  /* On arrondit l'angle inférieur droit */
+    /*width: 60px;*/
+    /*border-top-right-radius: 20px 20px;*/ /* On arrondit l'angle supérieur droit */
+    /*border-bottom-right-radius: 20px 20px;*/  /* On arrondit l'angle inférieur droit */
+    width: 15%;
+    margin: 0 0 0 0;
+    border-radius: 30px 30px 30px 30px;
     border: 0px solid;
     background-color: #0065FC;
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 34px;
+    font-weight: initial;
     color: #ffffff;
+    flex-shrink: 0;
 }
 
-/* 
-   On insère "Rechercher" dans le bouton de recherche
-   Nécessaire pour pouvoir changer le texte en icone en version mobile
-*/
+/* Changement de "Rechercher" en icone Loupe pour vue mobile */
 .search-button:before {
-    content:"Rechercher";
+    font-family: fontAwesome;
+    content: "\f002";
 }
 
 
@@ -186,7 +195,7 @@ main {
 }
 
 .filters-list {
-    margin: 2% 0 0 9px;
+    margin: 40px 0 0 0;
     display: flex;    /* Permettre à la phrase de revenir à la ligne */
     flex-wrap: wrap;
     align-items: center;
@@ -195,13 +204,18 @@ main {
 /* "Filtres" */
 .filters-list span {
     font-weight: bold;  /* "Filtres" en gras */
-    font-size: 17px;
+    font-size: 34px;
+}
+
+.filters-list span:first-child {
+    width: 100%;
+    margin: 0 0 10px 0;
 }
 
 /* Chaque filtre */
 .filters {
-    margin: 5px 0 5px 30px;
-    border: 2px solid #d9d9d9;
+    margin: 15px 20px 15px 0;
+    border: 4px solid #d9d9d9;
     border-left: 0px;
     border-radius: 100px 100px 100px 100px; /* On arrondit les coins */
     background-color: #ffffff;
@@ -214,12 +228,12 @@ main {
 
 /* Logo filtre */
 .filters .fa-solid {
-    width: 50px;
-    height: 45px;
+    width: 90px;
+    height: 90px;
     background-color: #DEEBFF;
     border-radius: 100px 100px 100px 100px; /* Cercle */
     color: #0065FC;
-    font-size: 18px;
+    font-size: 31px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -236,27 +250,28 @@ main {
 
 /* Intitulé filtre */
 .filters span {
-    padding: 0 20px 0 10px;
+    padding: 0 35px 0 20px;
+    font-size: 31px;
 }
 
 /* Dimensions de la div avec logo + phrase */
 .results {
-    margin: 3% 0 0 0;
-    font-size: 16px;
+    margin: 40px 0 0 0;
     display: flex;
-    align-items: center;
+    align-items: initial;
 }
 
 .fa-info {
-    width: 24px;
-    height: 24px;
+    width: 40px;
+    height: 40px;
     border-radius: 100px 100px 100px 100px; /* Cercle */
     border: 1px solid #d9d9d9;
-    font-size: 12px;
+    font-size: 22px;
     color: #0065FC;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
 }
 
 /* Phrase nombre de résultats */
@@ -266,39 +281,49 @@ main {
 
 /* Div hébergements et populaires */
 .lodgings-popular {
-    margin: 36px 0 0 0;
+    margin: 60px 0 0 0;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: initial;
 }
 
+.lodgings-popular section:nth-child(1) {
+    order: 2;
+}
+
+.lodgings-popular section:nth-child(2) {
+    order: 1;
+}
 
 /* || HEBERGEMENTS MARSEILLE */
 
 #lodgings {
-    width: 65%;
-    background-color: #F2F2F2;
-    border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
-    padding: 0 3% 0 3%;
+    width: initial;
+    background-color: initial;
+    border-radius: initial; /* Arrondi bordure */
+    padding: 0 6% 0 6%;
 }
 
 /* "Hébergements à Marseille" */
 #lodgings h2 {
     width: 100%;
-    margin: 35px 0 7px 0;
+    margin: 50px 0 7px 0;
 }
 
 .lodging-list {
+    margin: 8% 0 0 0;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: space-between;
 }
 
 /* Encadré blanc card hébergement */
 .lodging-list a {
-    width: 31%;
-    margin: 2% 0 2% 0;
-    padding: 5px;
-    border-radius: 20px 20px 20px 20px;
+    width: 100%;
+    margin: 0 0 5% 0;
+    padding: 10px;
+    border-radius: 30px 30px 30px 30px;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
     background-color: #ffffff;
 }
@@ -312,7 +337,7 @@ main {
 }
 
 .lodging-image {
-    height: 110px;
+    height: 219px;
 }
 
 /* Miniature de card hébergement */
@@ -345,8 +370,8 @@ main {
 /* "Afficher plus" */
 .show-more {
     width: 100%;
-    margin: 3% 0 5% 0;
-    font-size: 16px;
+    margin: 30px 0 5% 0;
+    font-size: 36px;
     font-weight: bold;
 }
 
@@ -354,28 +379,28 @@ main {
 /* || LES PLUS POPULAIRES */
 
 .most-popular {
-    width: 31%;
-    border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
-    padding: 0 3% 0 3%;
+    width: initial;
+    border-radius: 0; /* Arrondi bordure */
+    padding: 0 6% 5% 6%;
     background-color: #F2F2F2;
-    flex-shrink: 2;
+    flex-shrink: initial;
 }
 
 /* "Les plus populaires" */
 .most-popular h2 {
-    margin: 35px 0 7px 0;
+    margin: 50px 0 7px 0;
     display: inline-block;
 }
 
 /* Etoile "Les plus populaires" */
 .most-popular-star {
-    margin: 35px 0 7px 0;
-    font-size: 20px;
+    margin: 50px 0 7px 0;
+    font-size: 39px;
     float: right;
 }
 
 .popular-list {
-    margin: 5% 0 0 0;
+    margin: 6% 0 0 0;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -384,9 +409,9 @@ main {
 
 /* Encadré blanc card populaire */
 .popular-list a {
-    margin: 0 0 8% 0;
-    padding: 5px;
-    border-radius: 20px 20px 20px 20px;
+    margin: 0 0 4% 0;
+    padding: 10px;
+    border-radius: 30px 30px 30px 30px;
     background-color: #ffffff;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
 }
@@ -398,8 +423,8 @@ main {
 }
 
 .popular-image {
-    width: 120px;
-    height: 130px;
+    width: 235px;
+    height: 260px;
 }
 
 /* Miniature card populaire */
@@ -412,7 +437,7 @@ main {
 
 /* Légende card populaire */
 .popular figcaption {
-    padding: 0 0 0 4%;
+    padding: 0 0 0 6%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -421,7 +446,7 @@ main {
 
 .popular h3 {
     width: 85%;
-    padding: 4% 0 0 0;
+    padding: 6% 0 0 0;
 }
 
 /* Prix populaire */
@@ -432,21 +457,25 @@ main {
 
 /* Note populaire */
 .popular .rating {
-    padding: 3% 0 3% 0;
+    padding: 3% 0 6% 0;
 }
 
 
 /* || ACTIVITES MARSEILLE */
 
+#activities {
+    padding: 0 6% 0 6%;
+}
+
 /* "Activités à Marseille" */
 #activities h2 {
-    margin: 50px 0 0 0;
+    margin: 50px 0 7px 0;
 }
 
 /* Div avec les cards activités */
 .activities-list {
-    height: 420px;
-    margin: 25px 0 0 0;
+    height: initial;
+    margin: 50px 0 0 0;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -456,51 +485,52 @@ main {
 
 /* Encadré blanc card activité */
 .activities-list a {
-    width: 22%;
+    width: 100%;
     height: 100%;
-    border-radius: 20px 20px 20px 20px;
+    margin: 0 0 8% 0;
+    border-radius: 30px 30px 30px 30px;
     background-color: #ffffff;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
 }
 
 /* Encadré 2eme card */
 .activities-list a:nth-child(2) {
-    height: 53%;
+    height: initial;
 }
 
 /* Encadré 3eme card */
 .activities-list a:nth-child(3) {
-    height: 37%;
+    height: initial;
 }
 
 /* Encadré 5eme card */
 .activities-list a:nth-child(5) {
-    height: 44%;
+    height: initial;
 }
 
 /* Encadré 6eme card */
 .activities-list a:nth-child(6) {
-    height: 47%;
+    height: initial;
 }
 
 /* Miniature 2eme card */
 .activities-list a:nth-child(2) img {
-    height: 76%;
+    height: 254px;
 }
 
 /* Miniature 3eme card */
 .activities-list a:nth-child(3) img {
-    height: 76%;
+    height: 254px;
 }
 
 /* Miniature 5eme card */
 .activities-list a:nth-child(5) img {
-    height: 76%;
+    height: 254px;
 }
 
 /* Miniature 6eme card */
 .activities-list a:nth-child(6) img {
-    height: 76%;
+    height: 254px;
 }
 
 /* Card activité */
@@ -513,7 +543,7 @@ main {
 /* Miniature card activité */
 .activity img {
     width: 100%;
-    height: 400px;
+    height: 254px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
     flex-grow: 1;
@@ -521,7 +551,7 @@ main {
 
 /* Pour chaque légende de card activité */
 .activity figcaption {
-    margin: 5% 0 5% 5%;
+    margin: 7% 0 5% 6%;
 }
 
 
@@ -533,283 +563,32 @@ footer {
 }
 
 .footer-list {
-    width: 93%;
+    width: 90%;
     margin: 0 auto 0 auto;
-    padding: 3% 2% 4% 2%;
+    padding: 10% 2% 10% 4%;
     display: flex;
+    flex-direction: column;
 }
 
 /* Tout le contenu de chaque div */
 footer li {
-    margin: 0 0 14px 0;
-    font-size: 15px;
+    margin: 0 0 20px 0;
+    font-size: 32px;
 }
 
 /* Titre de liste */
 footer p {
-    margin: 0 0 22px 0;
-    font-size: 17px;
+    margin: 0 0 30px 0;
+    font-size: 36px;
     font-weight: bold;
 }
 
 /* Espacement entre A propos et Nos Hébergements */
 .about {
-    margin: 0 228px 0 0;
+    margin: 0 0 55px 0;
 }
 
 /* Espacement entre Nos Hébergements et Assistance */
 .our-lodgings {
-    margin: 0 292px 0 0;
-}
-
-
-/* || PC L (992px - 1199px) */
-@media only screen and (max-width: 1199px) {
-
-/* || STYLE GENERAL */
-
-/* "Trouvez votre hébergement..." */
-h1 {
-    font-size: 19px;
-}
-
-/* "Hébergements à Marseille", "Les plus populaires" et "Activités à Marseille" */
-h2 {
-    font-size: 18px;
-
-}
-
-/* Pour chaque titre de card */
-h3 {
-    font-size: 12px;
-}
-
-/* Prix hébergement */
-.price {
-    font-size: 11px;
-}
-
-/* Note étoiles */
-.rating {
-    width: 48px;
-    font-size: 10px;
-}
-
-.fa-star {
-    font-size: 9px;
-}
-
-/* || HEADER */
-
-/* Logo */
-header img {
-    width: 67px;
-    height: 32px;
-    margin: 31px 0 0 3%;
-}
-
-header ul {
-    font-size: 14px;
-}
-
-header li {
-    padding: 32px 15px 0px 15px;    /* Permet d'avoir la bordure tout en haut */
-}
-
-
-/* || MAIN */
-
-/* "En plein centre ville..." */
-.search-filters p {
-    font-size: 14px;
-}
-
-
-/* || BARRE DE RECHERCHE */
-
-.fa-location-dot {
-    height: 35px;
-    width: 35px;
-}
-
-/* Champ de recherche */
-.search {
-    width: 166px;
-    height: 35px;
-    padding: 0 0 0 11px; /* On se décale un peu de la gauche */
-}
-
-.search-button {
-    width: 91px;
-    font-size: 14px;
-}
-
-
-/* || FILTRES ET RESULTATS */
-
-.filters-results {
-    height: 78px;
-    max-width: 651px;
-}
-
-.filters-list {
-    margin: 2% 0 0 6px;
-}
-
-/* "Filtres" */
-.filters-list span {
-    font-size: 15px;
-}
-
-/* Chaque filtre */
-.filters {
-    margin: 4px 0 4px 21px;
-}
-
-/* Logo filtre */
-.filters .fa-solid {
-    width: 35px;
-    height: 32px;
-    font-size: 16px;
-}
-
-/* Intitulé filtre */
-.filters span {
-    padding: 0 14px 0 7px;
-}
-
-/* Dimensions de la div avec logo + phrase */
-.results {
-    font-size: 14px;
-}
-
-.fa-info {
-    width: 17px;
-    height: 17px;
-    font-size: 10px;
-}
-
-/* Phrase nombre de résultats */
-.results p {
-    margin: 0 0 0 7px;
-}
-
-/* Div hébergements et populaires */
-.lodgings-popular {
-    margin: 25px 0 0 0;
-}
-
-
-/* || HEBERGEMENTS MARSEILLE */
-
-/* "Hébergements à Marseille" */
-#lodgings h2 {
-    margin: 25px 0 5px 0;
-}
-
-/* Encadré blanc card hébergement */
-.lodging-list a {
-    padding: 4px;
-}
-
-.lodging-image {
-    height: 77px;
-}
-
-/* Miniature de card hébergement */
-
-/* "Afficher plus" */
-.show-more {
-    font-size: 14px;
-}
-
-
-/* || LES PLUS POPULAIRES */
-
-/* "Les plus populaires" */
-.most-popular h2 {
-    margin: 25px 0 5px 0;
-}
-
-/* Etoile "Les plus populaires" */
-.most-popular-star {
-    margin: 25px 0 5px 0;
-    font-size: 18px;
-}
-
-/* Encadré blanc card populaire */
-.popular-list a {
-    padding: 4px;
-}
-
-.popular-image {
-    width: 84px;
-    height: 91px;
-}
-
-
-/* || ACTIVITES MARSEILLE */
-
-/* "Activités à Marseille" */
-#activities h2 {
-    margin: 35px 0 0 0;
-}
-
-/* Div avec les cards activités */
-.activities-list {
-    height: 294px;
-    margin: 18px 0 0 0;
-}
-
-/* Miniature card activité */
-.activity img {
-    height: 280px;
-}
-
-
-/* || Footer */
-
-/* Tout le contenu de chaque div */
-footer li {
-    margin: 0 0 10px 0;
-    font-size: 13px;
-}
-
-/* Titre de liste */
-footer p {
-    margin: 0 0 15px 0;
-    font-size: 15px;
-    font-weight: bold;
-}
-
-/* Espacement entre A propos et Nos Hébergements */
-.about {
-    margin: 0 160px 0 0;
-}
-
-/* Espacement entre Nos Hébergements et Assistance */
-.our-lodgings {
-    margin: 0 204px 0 0;
-}
-
-
-}
-
-/* || TABLETTE PAYSAGE (768px - 991px) */
-@media only screen and (max-width: 992px)
-{
-
-}
-
-
-/* || TABLETTE PORTRAIT & L MOBILE (767px - 600px) */
-@media only screen and (max-width: 768px)
-{
-    
-}
-
-
-/* || MOBILE S (599px & moins) */
-@media only screen and (max-width: 600px) {
-
+    margin: 0 0 55px 0;
 }
